# drone-radio-bridge

./: CMakeLists.txt  README.md  package.xml
Radio_Node/: setup.cfg  setup.py
include/: packet_encoder.hpp  packet_parser.hpp  serial_port.hpp
legacy/: README.md  main.cpp
legacy/Radio_Node/: package.xml
legacy/Radio_Node/Radio_Node/: Radio_Node.py
legacy/include/: crc16.hpp  serial_port.hpp
legacy/src/: crc16.cpp  packet_encoder.cpp  serial_port.cpp
legacy/test/: test_crc_roundtrip.cpp  test_packet_encoder.cpp  test_serial_roundtrip.cpp
src/: packet_encoder.cpp  packet_parser.cpp  radio_bridge_node.cpp  radio_bridge_node_ros2.cpp  serial_port.cpp  uav_command_parser.cpp  uav_example_sender.cpp  uav_interactive_sender.cpp  uav_test_node.cpp
test/: test_local_integration.cpp  test_packet_parser.cpp  test_serial_port.cpp
